2009-04-06  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/getlong.c: Include both <stdlib.h> and <errno.h> needed
	for strtol and errno, and do not include "defines.h" (not needed).

2009-04-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c, src/usermod.c, libmisc/getgr_nam_gid.c,
	libmisc/Makefile.am, lib/prototypes.h: Moved getgr_nam_gid() from
	src/useradd.c and src/usermod.c to libmisc/getgr_nam_gid.c.

2009-04-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Re-indent.
	* src/useradd.c: Use getlong instead of get_number.
	* src/useradd.c: Get rid of strtol.
	* src/useradd.c: Provide better warning in case a default GROUP or
	INACTIVE value is not valid in /etc/default/useradd.

2009-04-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Re-indent.
	* src/usermod.c: Specifying a inactivity value < -1 is not valid.

2009-04-06  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in: Prepare the next 4.1.3 release.
	* po/*.po, man/po/*.po: Updated PO files.

2009-04-06  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h, libmisc/addgrps.c: restrict add_groups() to
	ifndef USE_PAM.
	* lib/prototypes.h: Remove the declaration of add_cons_grps(). The
	function does not exist.
	* libmisc/setugid.c libmisc/age.c (setup_uid_gid): is_console is
	never set ifndef USE_PAM. Change the prototype of setup_uid_gid()
	when USE_PAM is not defined. This permits to remove add_groups
	from PAM builds.  setup_uid_gid is already subject to
	HAVE_INITGROUPS.
	* libmisc/pwd2spwd.c (pwd_to_spwd): pwd_to_spwd() is not used in
	PAM builds.

2009-04-05  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: do_update_age is only used ifndef USE_PAM. Make it
	more explicit.

2009-04-05  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Set errno to 0 before calling strtol.
